src/github.com/ebay/beam/query/parser/testdata/insert/errors/bad_subject.res
parser: unexpected type *parser.LiteralInt as subject of fact 1